<resources>
    <string name="app_name">Погода в Новосибирске</string>
    <string name="no_data">Нет данных</string>
    <string name="update">Обновить</string>
    <string name="slash">" / "</string>
    <string name="precipitation">ОСАДКИ</string>
    <string name="wind">ВЕТЕР</string>
    <string name="rain">Дождь</string>
    <string name="direction">Направление</string>
    <string name="speed">Скорость</string>
    <string name="snow">Снег</string>
    <string name="pressure">ДАВЛЕНИЕ</string>
    <string name="wetness">ВЛАЖНОСТЬ</string>
    <string name="real_feel">"По ощущению "</string>
    <string name="space">" "</string>
    <string name="speed_unit">" м/с"</string>
    <string name="pressure_unit">" мм рт ст"</string>
    <string name="percent">" %"</string>
    <string name="no_internet">Нет соединения с интернетом</string>
    <string name="error_message">Unable to resolve host \"informer.gismeteo.ru\": No address associated with hostname</string>
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_forecast_not_found">Cannot retrieve forecast data. Check your internet connection</string>
    <string-array name="week_day">
        <item>СУББОТА</item>
        <item>ВОСКРЕСЕНЬЕ</item>
        <item>ПОНЕДЕЛЬНИК</item>
        <item>ВТОРНИК</item>
        <item>СРЕДА</item>
        <item>ЧЕТВЕРГ</item>
        <item>ПЯТНИЦА</item>
    </string-array>

</resources>
